# shortbot

./: README.md  devenv.nix  devenv.yaml  justfile  pyproject.toml
shortbot/: app.py
